--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
       </section>
     </main>
     <div id="paymentModal" class="modal">
-      <!-- Контент модального окна будет вставлен с помощью JavaScript -->
+      <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>Оплата</h2>
+        <p>Переведите средства на следующий адрес:</p>
+        <p id="walletAddress"></p>
+        <div id="qrcode"></div>
+        <p>Или отсканируйте QR-код через Trust Wallet:</p>
+        <ol>
+          <li>Откройте Trust Wallet.</li>
+          <li>Нажмите на кнопку "Сканировать".</li>
+          <li>Наведите камеру на QR-код.</li>
+          <li>Подтвердите транзакцию.</li>
+        </ol>
+      </div>
     </div>
   </div>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
